--- a/calico/reference/felix/configuration.mdx
+++ b/calico/reference/felix/configuration.mdx
@@ -10,7 +10,7 @@ import TabItem from '@theme/TabItem';
 <Tabs>
 <TabItem label="Operator" value="Operator-0">
 
-If you have installed Calico using the operator, you cannot modify the environment provided to felix directly. To configure felix, see the [FelixConfiguration](../resources/felixconfig.mdx) resource instead.
+If you have installed Calico using the operator, you cannot modify the environment provided to Felix directly. To configure felix, see the [FelixConfiguration](../resources/felixconfig.mdx) resource instead.
 
 </TabItem>
 <TabItem label="Manifest" value="Manifest-1">
@@ -57,7 +57,7 @@ The full list of parameters which can be set is as follows.
 | `FailsafeInboundHostPorts`          | `FELIX_FAILSAFEINBOUNDHOSTPORTS`          | List of PortProto struct objects including UDP/TCP/SCTP ports and CIDRs that Felix will allow incoming traffic to host endpoints on irrespective of the security policy. This is useful to avoid accidentally cutting off a host with incorrect configuration. For backwards compatibility, if the protocol is not specified, it defaults to `"tcp"`. If a CIDR is not specified, it will allow traffic from all addresses. To disable all inbound host ports, use the value `[]`. The default value allows ssh access, DHCP, BGP, etcd and the Kubernetes API. [Default: `[{"port":22,"protocol":"tcp"},{"port":68,"protocol":"udp"},{"port":179,"protocol":"tcp"},{"port":2379,"protocol":"tcp"}, {"port":2380,"protocol":"tcp"}, {"port":5473,"protocol":"tcp"}, {"port":6443,"protocol":"tcp"}, {"port":6666,"protocol":"tcp"}, {"port":6667,"protocol":"tcp"}]`]                                                                                    | list                                                                                          |
 | `FailsafeOutboundHostPorts`         | `FELIX_FAILSAFEOUTBOUNDHOSTPORTS`         | List of PortProto struct objects including UDP/TCP/SCTP ports and CIDRs that Felix will allow outgoing traffic from host endpoints to irrespective of the security policy. This is useful to avoid accidentally cutting off a host with incorrect configuration. For backwards compatibility, if the protocol is not specified, it defaults to `"tcp"`. If a CIDR is not specified, it will allow traffic from all addresses. To disable all outbound host ports, use the value `[]`. The default value opens etcd's standard ports to ensure that Felix does not get cut off from etcd as well as allowing DHCP, DNS, BGP and the Kubernetes API. [Default: `[{"port":53,"protocol":"udp"},{"port":67,"protocol":"udp"}, {"port":179,"protocol":"tcp"}, {"port":2379,"protocol":"tcp"}, {"port":2380,"protocol":"tcp"}, {"port":5473,"protocol":"tcp"}, {"port":6443,"protocol":"tcp"}, {"port": 6666,"protocol":"tcp"}, {"port":6667,"protocol":"tcp"}]`] | list                                                                                          |
 | `FelixHostname`                     | `FELIX_FELIXHOSTNAME`                     | The hostname Felix reports to the plugin. Should be used if the hostname Felix autodetects is incorrect or does not match what the plugin will expect. [Default: `socket.gethostname()`]                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         | string                                                                                          |
-| `HealthEnabled`                     | `FELIX_HEALTHENABLED`                     | When enabled, exposes felix health information via an http endpoint.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             | boolean                                                                                         |
+| `HealthEnabled`                     | `FELIX_HEALTHENABLED`                     | When enabled, exposes Felix health information via an http endpoint.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             | boolean                                                                                         |
 | `HealthHost`                        | `FELIX_HEALTHHOST`                        | The address on which Felix will respond to health requests. [Default: `localhost`]                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               | string                                                                                          |
 | `HealthPort`                        | `FELIX_HEALTHPORT`                        | The port on which Felix will respond to health requests. [Default: `9099`]                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       | int                                                                                             |
 | `HealthTimeoutOverrides`            | `FELIX_HEALTHTIMEOUTOVERRIDES`            | Allows the internal watchdog timeouts of individual subcomponents to be overridden; example: "InternalDataplaneMainLoop=30s,CalculationGraph=2m". This is useful for working around "false positive" liveness timeouts that can occur in particularly stressful workloads or if CPU is constrained. For a list of active subcomponents, see Felix's logs. [Default: ``]                                                                                                                                                                                                                                                                                                                                                          | Comma-delimited list of key/value pairs where the values are durations: `1s`, `10s`, `5m`, etc. |
@@ -116,9 +116,9 @@ via Felix's configuration.
 
 | Configuration file parameter        | Environment variable                      | Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        | Schema  |
 | ----------------------------------- | ----------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ------- | 
-| GoGCThreshold                       | `FELIX_GOGCTHRESHOLD`, `GOGC`             | Sets the Go runtime's garbage collection threshold; this is the percentage that the heap is allowed to grow before GC is triggered.   In general, doubling the value halves the CPU timespent doing GC, but it also doubles peak GC memory overhead.  A special value of -1 can be used to disable GC entirely; this should only be used in conjunction with the `GoMemoryLimitMB` setting.  This setting is overridden by the `GOGC` environment variable.                                                                                                                                                        | int     |
-| GoMemoryLimitMB                     | `FELIX_GOMEMORYLIMITMB`, `GOMEMLIMIT`     | GoMemoryLimitMB sets a (soft) memory limit for the Go runtime in MB.  The Go runtime will try to keep its memory usage under the limit by triggering GC as needed.  To avoid thrashing, it will exceed the limit if GC starts to take more than 50% of the process's CPU time.  A value of -1 disables the memory limit. Note that the memory limit, if used, must be considerably less than any hard resource limit set at the container or pod level.  This is because felix is not the only process that must run in the container or pod. This setting is overridden by the `GOMEMLIMIT` environment variable. | int     |
-| GoMaxProcs                          | `FELIX_GOMAXPROCS`, `GOMAXPROCS`          | Sets the maximum number of CPUs that the Go runtime will use concurrently.  A value of -1 means "use the system default"; typically the number of real CPUs on the system.  This setting is overridden by the `GOMAXPROCS` environment variable.                                                                                                                                                                                                                                                                                                                                                                   | int     |
+| `GoGCThreshold`                     | `FELIX_GOGCTHRESHOLD`, `GOGC`             | Sets the Go runtime's garbage collection threshold; this is the percentage that the heap is allowed to grow before GC is triggered.   In general, doubling the value halves the CPU timespent doing GC, but it also doubles peak GC memory overhead.  A special value of -1 can be used to disable GC entirely; this should only be used in conjunction with the `GoMemoryLimitMB` setting.  This setting is overridden by the `GOGC` environment variable.                                                                                                                                                        | int     |
+| `GoMemoryLimitMB`                   | `FELIX_GOMEMORYLIMITMB`, `GOMEMLIMIT`     | GoMemoryLimitMB sets a (soft) memory limit for the Go runtime in MB.  The Go runtime will try to keep its memory usage under the limit by triggering GC as needed.  To avoid thrashing, it will exceed the limit if GC starts to take more than 50% of the process's CPU time.  A value of -1 disables the memory limit. Note that the memory limit, if used, must be considerably less than any hard resource limit set at the container or pod level.  This is because Felix is not the only process that must run in the container or pod. This setting is overridden by the `GOMEMLIMIT` environment variable. | int     |
+| `GoMaxProcs`                        | `FELIX_GOMAXPROCS`, `GOMAXPROCS`          | Sets the maximum number of CPUs that the Go runtime will use concurrently.  A value of -1 means "use the system default"; typically the number of real CPUs on the system.  This setting is overridden by the `GOMAXPROCS` environment variable.                                                                                                                                                                                                                                                                                                                                                                   | int     |
 
 ### etcd datastore configuration
 
