--- a/calico/reference/resources/felixconfig.mdx
+++ b/calico/reference/resources/felixconfig.mdx
@@ -51,7 +51,7 @@ spec:
 | featureDetectOverride              | Is used to override the feature detection. Values are specified in a comma separated list with no spaces, example; "SNATFullyRandom=true,MASQFullyRandom=false,RestoreSupportsLock=". "true" or "false" will force the feature, empty or omitted values are auto-detected. | string                                                       | string                                  | `""`                                                         |
 | genericXDPEnabled                  | When enabled, Felix can fallback to the non-optimized `generic` XDP mode. This should only be used for testing since it doesn't improve performance over the non-XDP mode. | true,false                                                   | boolean                                 | `false`                                                      |
 | goGCThreshold                      | Sets the Go runtime's garbage collection threshold; this is the percentage that the heap is allowed to grow before GC is triggered.   In general, doubling the value halves the CPU timespent doing GC, but it also doubles peak GC memory overhead.  A special value of -1 can be used to disable GC entirely; this should only be used in conjunction with the `goMemoryLimitMB` setting.  This setting is overridden by the GOGC environment variable. | int                                                   | int                                 | `40`                                                      |
-| goMemoryLimitMB                    | GoMemoryLimitMB sets a (soft) memory limit for the Go runtime in MB.  The Go runtime will try to keep its memory usage under the limit by triggering GC as needed.  To avoid thrashing, it will exceed the limit if GC starts to take more than 50% of the process's CPU time.  A value of -1 disables the memory limit. Note that the memory limit, if used, must be considerably less than any hard resource limit set at the container or pod level.  This is because felix is not the only process that must run in the container or pod. This setting is overridden by the GOMEMLIMIT environment variable. | int                                                   | int                                 | `-1`                                                      |
+| goMemoryLimitMB                    | GoMemoryLimitMB sets a (soft) memory limit for the Go runtime in MB.  The Go runtime will try to keep its memory usage under the limit by triggering GC as needed.  To avoid thrashing, it will exceed the limit if GC starts to take more than 50% of the process's CPU time.  A value of -1 disables the memory limit. Note that the memory limit, if used, must be considerably less than any hard resource limit set at the container or pod level.  This is because Felix is not the only process that must run in the container or pod. This setting is overridden by the GOMEMLIMIT environment variable. | int                                                   | int                                 | `-1`                                                      |
 | goMaxProcs                         | Sets the maximum number of CPUs that the Go runtime will use concurrently.  A value of -1 means "use the system default"; typically the number of real CPUs on the system.  This setting is overridden by the GOMAXPROCS environment variable. | int | int | `-1` |
 | interfaceExclude                   | A comma-separated list of interface names that should be excluded when Felix is resolving host endpoints. The default value ensures that Felix ignores Kubernetes' internal `kube-ipvs0` device. If you want to exclude multiple interface names using a single value, the list supports regular expressions. For regular expressions you must wrap the value with `/`. For example having values `/^kube/,veth1` will exclude all interfaces that begin with `kube` and also the interface `veth1`. | string                                                       | string                                  | `kube-ipvs0`                                                 |
 | interfacePrefix                    | The interface name prefix that identifies workload endpoints and so distinguishes them from host endpoint interfaces. Note: in environments other than bare metal, the orchestrators configure this appropriately. For example our Kubernetes and Docker integrations set the 'cali' value, and our OpenStack integration sets the 'tap' value. | string                                                       | string                                  | `cali`                                                       |
@@ -69,7 +69,7 @@ spec:
 | iptablesPostWriteCheckInterval     | Period after Felix has done a write to the dataplane that it schedules an extra read back to check the write was not clobbered by another process. This should only occur if another application on the system doesn't respect the iptables lock. | `5s`, `10s`, `1m` etc.                                       | duration                                | `1s`                                                         |
 | iptablesRefreshInterval            | Period at which Felix re-checks all iptables state to ensure that no other process has accidentally broken {{prodname}}'s rules. Set to 0 to disable iptables refresh. | `5s`, `10s`, `1m` etc.                                       | duration                                | `90s`                                                        |
 | ipv6Support                        | IPv6 support for Felix                                       | true, false                                                  | boolean                                 | `true`                                                       |
-| kubeNodePortRanges                 | This parameter holds a list of port ranges used for service node ports. Only used if felix detects kube-proxy running in IPVS mode. | A list of strings                                            | A list of port ranges                   | `30000:32767`                                                |
+| kubeNodePortRanges                 | This parameter holds a list of port ranges used for service node ports. Only used if Felix detects kube-proxy running in IPVS mode. | A list of strings                                            | A list of port ranges                   | `30000:32767`                                                |
 | logFilePath                        | The full path to the Felix log. Set to `none` to disable file logging. | string                                                       | string                                  | `/var/log/calico/felix.log`                                  |
 | logPrefix                          | The log prefix that Felix uses when rendering LOG rules.     | string                                                       | string                                  | `calico-packet`                                              |
 | logSeverityFile                    | The log severity above which logs are sent to the log file.  | Same as `logSeveritySys`                                     | string                                  | `Info`                                                       |
@@ -139,7 +139,7 @@ spec:
 | bpfMapSizeNATFrontend              | In eBPF dataplane mode, controls the size of the NAT front end map. | int                                                          | int                                     | 65536                                                        |
 | bpfMapSizeNATBackend               | In eBPF dataplane mode, controls the size of the NAT back end map. | int                                                          | int                                     | 262144                                                       |
 | bpfMapSizeRoute                    | In eBPF dataplane mode, controls the size of the route map.  | int                                                          | int                                     | 262144                                                       |
-| bpfPolicyDebugEnabled              | In eBPF dataplane mode, controls whether felix will collect policy dump for each interface. | true, false                                                  | boolean                                 | true                                                         |
+| bpfPolicyDebugEnabled              | In eBPF dataplane mode, controls whether Felix will collect policy dump for each interface. | true, false                                                  | boolean                                 | true                                                         |
 | routeSource                        | Where Felix gets is routing information from for VXLAN and the BPF dataplane. The CalicoIPAM setting is more efficient because it supports route aggregation, but it only works when Calico's IPAM or host-local IPAM is in use. Use the WorkloadIPs setting if you are using Calico's VXLAN or BPF dataplane and not using Calico IPAM or host-local IPAM. | CalicoIPAM,WorkloadIPs                                       | string                                  | `CalicoIPAM`                                                 |
 | mtuIfacePattern                    | Pattern used to discover the host's interface for MTU auto-detection. | regex                                                        | string                                  | ^((en&#124;wl&#124;ww&#124;sl&#124;ib)[opsvx]&#46;&#42;&#124;(eth&#124;wlan&#124;wwan).&#42;) |
 | bpfForceTrackPacketsFromIfaces     | Forces traffic from these interfaces in BPF mode to skip Calico's iptables NOTRACK rule, allowing traffic from those interfaces to be tracked by Linux conntrack.  Use only for interfaces that are not used for the Calico fabric, for example, a docker bridge device for non-Calico-networked containers. | A list of strings                                            | A list of strings                       | docker+                                                      |
