--- a/calico-enterprise_versioned_docs/version-3.17/visibility/visualize-traffic.mdx
+++ b/calico-enterprise_versioned_docs/version-3.17/visibility/visualize-traffic.mdx
@@ -2,9 +2,7 @@
 description: Learn the power of network sets.
 ---
 
-import ImageCaption from "../../../src/___new___/components/ImageCaption";
-
-# Network Visualization
+# Network visualization
 
 > From the left navbar, select **Service Graph**, **Default**
 
@@ -58,8 +56,10 @@ Here is an examples showing how services and endpoints are grouped under service
 with synthetic traffic data to showcase the service group feature and do not have any other value.
 
 ![service-groups](/img/calico-enterprise/service-graph/servicegroups.gif)
-<ImageCaption>The image shows service graph in namespace view containing a node "*", which is not representing a namespace but
-    aggregation of service groups from different namespaces.</ImageCaption>
+
+<ImageCaption>
+  The image shows Service Graph in namespace view containing a node, "*", which represents not a namespace but an aggregation of service groups from different namespaces.
+</ImageCaption>
 
 
 **Logs, alerts, and capture jobs**
