--- a/calico-cloud/_includes/content/_non-cluster-binary-install.mdx
+++ b/calico-cloud/_includes/content/_non-cluster-binary-install.mdx
@@ -13,7 +13,7 @@ This step requires Docker, but it can be run from any machine with Docker instal
 1. Use the following command to download the {variables.nodecontainer} image.
 
    ```bash
-   docker pull {variables.registry}{{componentImage.cnxNode}}
+   docker pull {variables.registry}{variables.componentImage.cnxNode}
    ```
 
 1. Confirm that the image has loaded by typing `docker images`.
@@ -26,7 +26,7 @@ This step requires Docker, but it can be run from any machine with Docker instal
 1. Create a temporary {variables.nodecontainer} container.
 
    ```bash
-   docker create --name container {variables.registry}{{componentImage.cnxNode}}
+   docker create --name container {variables.registry}{variables.componentImage.cnxNode}
    ```
 
 1. Copy the calico-node binary from the container to the local file system.
